推荐页面完成，明天开始做点击事件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_activity_time">ActivityTime</string>
     <string name="title_activity_activity_cyber">ActivityCyber</string>
     <string name="title_activity_activity_mine">ActivityMine</string>
+    <string name="title_activity_activity__show_header">Activity_ShowHeader</string>
 </resources>
